--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -16,13 +16,15 @@
     <!--Posts-->
     <section class="post container">
         {% for post in posts %}
-        <div class="post-caixa hormonal">
-            <img src="assets/hormonal.png" alt="" class="post-img"> 
+        <div class="post-caixa">
+            {% if post.imagem%}
+                <img src="{{post.imagem.url}}" alt="" class="post-img">
+            {% else %} 
+                <img src="{% static 'assets/place.png'%}" alt="" class="post-img"> 
+            {% endif %}
             <h2 class="categoria"{{psot.categria}}</h2>
             <a href="hormonais.html" class="post-titulo">{{post.titulo}}</a>
-            <p class="post-descricao">{{post.titulo}}
-                São métodos à base de formas sintéticas dos hormônios femininos estrogênio e progesterona. Alguns desses métodos combinam os dois hormônios, enquanto outros têm apenas progesterona. 
-            </p>
+            <p class="post-descricao">{{post.descricao}}</p>
         </div>
         {% endfor %}
     </section>
