--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -23,10 +23,10 @@
                 <img src="{% static 'assets/place.png'%}" alt="" class="post-img"> 
             {% endif %}
             <h2 class="categoria"{{psot.categria}}</h2>
-            <a href="hormonais.html" class="post-titulo">{{post.titulo}}</a>
+            <a href="{% url 'postagem' id=post.id %}" class="post-titulo">{{post.titulo}}</a>
             <p class="post-descricao">{{post.descricao}}</p>
         </div>
         {% endfor %}
     </section>
 
-    {% endblock %}
+    {% endblock %} 
